--- a/web/themes/custom/commerce_2_demo/sass/custom/pages/_product_uh-axe.scss
+++ b/web/themes/custom/commerce_2_demo/sass/custom/pages/_product_uh-axe.scss
@@ -327,13 +327,20 @@
       z-index: 0;
       width: 100%;
       height: 100%;
-      background-color: #D3D3D3;
+      min-height: 800px;
+      background: #D3D3D3 url(../gfx/logo-icon-watermark.svg) center center no-repeat;
+      background-size: 140px 140px;
       overflow: hidden;
 
+      @media (max-width: $screen-md-max) {
+        min-height: 698px;
+      }
       @media (max-width: $screen-sm-max) {
+        min-height: 530px;
+
         img {
           max-width: none;
-          max-height: 570px;
+          max-height: 530px;
           margin-left: 50%;
           transform: translateX(-50%);
         }
@@ -447,6 +454,11 @@
         &.product__images__overlay-marker--5 {
           display: none;
           visibility: hidden;
+        }
+      }
+      @media (max-width: $screen-xs-max) {
+        &.product__images__overlay-marker--3 {
+          left: 40%;
         }
       }
     }
