Sync UH Axe finish slider arrow nav with add to cart selection. Also add thumbnail swipe for mobile.

--- a/web/themes/custom/commerce_2_demo/sass/custom/_content.scss
+++ b/web/themes/custom/commerce_2_demo/sass/custom/_content.scss
@@ -517,5 +517,14 @@ table {
 
   .modal-footer {
     border: none;
+
+    .btn-default {
+      background: transparent;
+      color: #fff;
+
+      &:hover, &:focus {
+        color: $c-primary;
+      }
+    }
   }
 }
