Issue 30: Fix items 2 and refines a bunch of javascript so that the UH Axe is a guided buying experience.

--- a/web/themes/custom/commerce_2_demo/sass/custom/pages/_product_uh-axe.scss
+++ b/web/themes/custom/commerce_2_demo/sass/custom/pages/_product_uh-axe.scss
@@ -64,7 +64,27 @@
     // Custom attribute selector.
     .attribute-handle-length,
     .attribute-head-weight {
+      display: none;
       margin-bottom: 35px;
+
+      &.active {
+        display: block;
+      }
+
+      &.deselected {
+        .attribute-selector.selected {
+          border: 1px solid #ccc;
+
+          &:before {
+            border: 5px solid #f6f6f6;
+          }
+
+          &:hover, &:focus {
+            box-shadow: 0 4px 15px 0 rgba(0,0,0,0.2);
+            cursor: pointer;
+          }
+        }
+      }
 
       .col-xs-4 {
         margin-bottom: 10px;
@@ -121,6 +141,8 @@
             cursor: default;
           }
         }
+
+
       }
 
       .attribute-selector__name {
@@ -151,6 +173,23 @@
   }
 
   // Main product add to cart form.
+  .main-product-form {
+    display: none;
+
+    &.active {
+      display: flex !important;
+    }
+  }
+
+  .main-product-form__title,
+  .main-product-form__mobile {
+    display: none;
+
+    &.active {
+      display: block;
+    }
+  }
+
   .product__intro {
     padding: 0;
     background-color: #e9e9e9;
