Issue 30: Further refines javascript for UH Axe guided buying experience. Better checks for what steps user has completed.

--- a/web/themes/custom/commerce_2_demo/sass/custom/pages/_product_uh-axe.scss
+++ b/web/themes/custom/commerce_2_demo/sass/custom/pages/_product_uh-axe.scss
@@ -187,12 +187,24 @@
     }
   }
 
-  .main-product-form__title,
-  .main-product-form__mobile {
+  .main-product-form__title {
     display: none;
 
     &.active {
       display: block;
+    }
+  }
+
+  .main-product-form__mobile {
+    display: none;
+  }
+  @media (max-width: $screen-sm-max) {
+    .main-product-form__mobile {
+      display: none;
+
+      &.active {
+        display: block;
+      }
     }
   }
 
