--- a/web/themes/custom/commerce_2_demo/templates/commerce/commerce-order-item-add-to-cart-form--ux-axe.html.twig
+++ b/web/themes/custom/commerce_2_demo/templates/commerce/commerce-order-item-add-to-cart-form--ux-axe.html.twig
@@ -228,7 +228,7 @@
   </div>
 
   {# Mobile form action #}
-  <div class="row main-product-form__mobile visible-xs visible-sm">
+  <div class="row main-product-form__mobile">
     <div class="col-xs-12 text-center product__intro  product__intro--mobile">
       <div class="product__intro-bottom">
         <div class="product__intro--mobile__left">
