--- a/web/themes/custom/commerce_2_demo/templates/paragraphs/paragraph--2-column-image-content.html.twig
+++ b/web/themes/custom/commerce_2_demo/templates/paragraphs/paragraph--2-column-image-content.html.twig
@@ -67,7 +67,7 @@ view_mode ? 'paragraph--view-mode--' ~ view_mode|clean_class,
           {% endif %}
             <div class="paragraph--type--2-column-image-content__content">
               {% if content.field_heading|render|trim is not empty  %}
-                <h2>{{ content.field_heading }}</h2>
+                <h2 class="paragraph-title">{{ content.field_heading }}</h2>
               {% endif %}
               {{ content.field_formatted_text }}
               {{ content.field_unlimited_cta_links }}
